# xgboost.hs

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  Setup.hs  xgboost.cabal
cbits/: test.c
data/: agaricus.txt
include/: test.h
src/: Xgboost.hs
src-c/: test.c  xgboost
src/Data/: Matrix.hs  Xgboost.hs
src/Data/Matrix/: Construct.hs
src/Data/Xgboost/: Construct.hs  Example.hs  Example_stub.h
src/Xgboost/: ;w  Construct.hs  Example.hs  Foreign.hs
tests/: Test.hs
