Name:                xgboost
Version:             0.1.0.0
Synopsis:            A foreign interface to the Xgboost library
Category:            Data Mining, Machine Learning, Algorithms, Data structures
License:             MIT
License-file:        LICENSE
Author:              Robert Krzyzanowski
Maintainer:          technoguyrob@gmail.com
Build-type:          Simple
Cabal-Version:       >= 1.10
Homepage:            https://github.com/robertzk/xgboost.hs
Bug-Reports:         https://github.com/robertzk/xgboost.hs/issues

Description:
  A foreign function interface to the <https://github.com/dmlc/xgboost Xgboost>
  C library for gradient-boosted distributed trees.

----------------------------------------------------------------------

extra-source-files:  README.md, cbits, include

Library
  hs-source-dirs: src

  -- Modules exported by the library.
  exposed-modules:     
    Data.Xgboost
    Data.Xgboost.Construct
    Data.Xgboost.Example
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8,
                       vector 
  
  -- Directories containing source files.
  -- hs-source-dirs:      

  Include-dirs:
    include

  Includes:
    include/test.h

  C-sources:
    cbits/test.c
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
