name:                xgboost
version:             0.1.0.3
synopsis:            A foreign interface to the Xgboost library
category:            Data Mining, Machine Learning, Algorithms, Data structures
license:             MIT
license-file:        LICENSE
author:              Robert Krzyzanowski
maintainer:          technoguyrob@gmail.com
build-type:          Custom
cabal-version:       >= 1.10
homepage:            https://github.com/robertzk/xgboost.hs
bug-reports:         https://github.com/robertzk/xgboost.hs/issues

description:
  A foreign function interface to the <https://github.com/dmlc/xgboost Xgboost>
  C library for gradient-boosted distributed trees.

extra-source-files:
    README.md,
    cbits,
    include

Library
  hs-source-dirs: src

  exposed-modules:     
    Xgboost
    Xgboost.Construct
    Xgboost.Example
    Xgboost.Foreign
  
  build-depends:       base >= 4.7 && < 4.8,
                       vector
  
  include-dirs:
    ./include

  includes:
    ./include/test.h

  c-sources:
    ./cbits/test.c

  other-extensions: CPP
              , ForeignFunctionInterface
              , EmptyDataDecls
              , RecordWildCards
  
  default-language:    Haskell2010

  if (arch(i386) || arch(x86_64))
    cpp-options: -DARCH_X86 -dynamic -Wall -msse2 -Wno-unknown-pragmas -funroll-loops -DDISABLE_OPENMP -static-libgcc -fPIC
  -- TODO: (RK) Else...?

Test-Suite test-xgboost
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
                  src
  main-is:        Test.hs
  build-depends:  base,
                  Cabal >= 1.9.2,
                  vector,
                  xgboost
  --extra-include-dirs: /opt/local/include
  --extra-lib-dirs: /opt/local/lib
  cpp-options: -DARCH_X86 -dynamic -Wall -msse2 -Wno-unknown-pragmas -funroll-loops -DDISABLE_OPENMP -static-libgcc -fPIC
  ghc-options: xgboost/wrapper/libxgboostwrapper.so

  other-extensions: CPP
              , ForeignFunctionInterface
              , EmptyDataDecls
              , RecordWildCards
   
